apps/base/homelable/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homelable
  namespace: homelable
subsets:
  - addresses:
      - ip: 192.168.10.148
    ports:
      - name: http
        port: 3000
        protocol: TCP
