apps/base/homelable/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelable
  namespace: homelable
spec:
  clusterIP: None
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
